syntax = "proto3";


package chat;
option go_package = ".;chat";



service Chat {
  rpc BidStream(stream Request) returns (stream Response) {}
}

message Request {
  string fromUser = 1;
  string toUser = 2;
  string roomName = 3;
  string content = 4;
  string event = 5;
}

message Response {
  string fromUser = 1;
  string toUser = 2;
  string roomName = 3;
  string content = 4;
  int64 time = 5;
  int32 msgType = 6; // 消息类型，私聊 1，群聊 2，系统消息 3
}